fix intermittent scrollbars

--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -2,4 +2,5 @@ mat-sidenav-content {
   // display: flex;
   align-items: stretch;
   flex-grow: 1;
+  overflow: hidden;
 }
