--- a/projects/demo/src/app/user/vectors/edit-vector/edit-vector.component.scss
+++ b/projects/demo/src/app/user/vectors/edit-vector/edit-vector.component.scss
@@ -7,7 +7,7 @@
 }
 
 #WorkspaceContainer {
-  overflow: hidden;
+  overflow: auto;
   height: 100%;
 
   canvas#Workspace {
